--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
           </text>
         </svg>
         <div class="gnb">
-          <div>Zero100</div>
+          <div>
+            <a href="./zero100.html">Zero100</a>
+          </div>
           <div>Amazon Kr</div>
           <div>Threads</div>
         </div>
