--- a/zero100.html
+++ b/zero100.html
@@ -3,14 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_back"
+    />
     <link rel="stylesheet" href="zero100.css" />
     <script defer src="zero100.js"></script>
     <title>Document</title>
   </head>
   <body>
+    <a id="backBtn" href="./index.html">
+      <span class="material-symbols-outlined"> arrow_back </span>
+    </a>
+
     <main id="innerWrapp">
       <section id="intro">
-        <img class="introSymbol" src="./img/logo1.png" alt="" />
+        <div class="DescWarpp">
+          <div class="logoWarpp">
+            <img class="introSymbol" src="./img/logo1.png" alt="logo1" />
+          </div>
+          <div class="allDescWarpp">
+            <div class="txtWarpp">
+              <div class="Txt">전기차 충전로봇 서비스 프로젝트</div>
+              <div class="Txt">
+                Electric Vehicle Charging Robot Service Project
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="introImg">
+          <img class="backImg" src="./img/introBack.png" alt="introBack" />
+          <img class="frontImg" src="./img/introImg.png" alt="introImg" />
+        </div>
       </section>
       <section id="bg">
         <div class="sectionTitle">Background</div>
@@ -448,38 +472,42 @@
         </div>
         <div class="AllenswerBox">
           <div class="TopenswerBoxWrapp">
-            <div class="enswerBox">
-              충전기가 청결하지 않아 충전기를 <br />
-              잡기가 꺼려져요
-            </div>
-            <div class="enswerBoxY">
-              충전후에 커넥터를 뽑으러 다시 <br />지하로 가기 귀찮아요
-            </div>
-            <div class="enswerBox">
-              급속 충전기 보급 수가
-              <br />
-              부족한거 같아요
-            </div>
-            <div class="enswerBoxY">
-              휴게소에 있는 충전소가
-              <br />
-              늘어났으면 좋겠어요
+            <div class="slideWarpp">
+              <div class="enswerBox">
+                충전기가 청결하지 않아 충전기를 <br />
+                잡기가 꺼려져요
+              </div>
+              <div class="enswerBox">
+                충전후에 커넥터를 뽑으러 다시 <br />지하로 가기 귀찮아요
+              </div>
+              <div class="enswerBox">
+                급속 충전기 보급 수가
+                <br />
+                부족한거 같아요
+              </div>
+              <div class="enswerBox">
+                휴게소에 있는 충전소가
+                <br />
+                늘어났으면 좋겠어요
+              </div>
             </div>
           </div>
           <div class="BottomenswerBoxWrapp">
-            <div class="enswerBoxY">
-              충전 케이블이 너무 두꺼워 매번 정리하기가 힘들어요
-            </div>
-            <div class="enswerBox">
-              앞으로 다양한 방식의 충전 시스템이 필요할것 같아요
-            </div>
-            <div class="enswerBoxY">
-              앞으로 다양한 방식의 충전 시스템이 필요할것 같아요
-            </div>
-            <div class="enswerBox">
-              충전 터치 스크린이 불편하고
-              <br />
-              위생이 염려돼요
+            <div class="slideWarpp">
+              <div class="enswerBox">
+                충전 케이블이 너무 두꺼워 매번 정리하기가 힘들어요
+              </div>
+              <div class="enswerBox">
+                앞으로 다양한 방식의 충전 시스템이 필요할것 같아요
+              </div>
+              <div class="enswerBox">
+                앞으로 다양한 방식의 충전 시스템이 필요할것 같아요
+              </div>
+              <div class="enswerBox">
+                충전 터치 스크린이 불편하고
+                <br />
+                위생이 염려돼요
+              </div>
             </div>
           </div>
         </div>
@@ -592,9 +620,18 @@
         <div class="loginOnbording">
           <div class="imgWrapp">
             <img src="./img/m1.png" alt="m1" />
+            <img src="./img/m2.png" alt="m2" />
+            <img src="./img/m3.png" alt="m3" />
           </div>
-          <img src="./img/m2.png" alt="m2" />
-          <img src="./img/m3.png" alt="m3" />
+        </div>
+        <div class="MsubTitleWarpp">
+          <div class="koTxt">
+            차량의 잔여 전력, 주행가능거리, 배정된 충전로봇의 상태와 충전이
+            가능한 장소, 예상 금액, 등을 한페이지에서 사용자가 확인할 수 있다.
+          </div>
+          <div class="elTxt">
+            You can check the information you need <br />on one page.
+          </div>
         </div>
         <div class="mainPay">
           <div class="lefttImg">
@@ -606,6 +643,17 @@
           <div class="rightImg">
             <img class="subImg" src="./img/m4_2.png" alt="m4_2" />
             <img class="subImg" src="./img/m4_3.png" alt="m4_3" />
+          </div>
+        </div>
+        <div class="MsubTitleWarpp">
+          <div class="sectionTitle">Pay</div>
+          <div class="koTxt">
+            여러개의 결제수단을 등록할 수 있어 사용자가 필요한 결제 수단으로
+            결제할 수 있다.
+          </div>
+          <div class="elTxt">
+            Multiple payment methods can be registered, requiring usersYou can
+            pay by means of payment.
           </div>
         </div>
         <div class="pay">
@@ -621,6 +669,18 @@
             </div>
           </div>
         </div>
+        <div class="MsubTitleWarpp">
+          <div class="sectionTitle">Map</div>
+          <div class="koTxt">
+            원하는 충전장소를 검색하면 충전가능한 충전로봇 현황을 실시간으로 볼
+            수 있다.
+          </div>
+          <div class="elTxt">
+            If you search for a charging place you want, you can find out the
+            status of a charging robot that can be charged You can watch it in
+            real time.
+          </div>
+        </div>
         <div class="map">
           <div class="mapImg">
             <img src="./img/m7.png" alt="m7" />
@@ -632,6 +692,17 @@
                 <img src="./img/m8_1.png" alt="m8_1.png" />
               </div>
             </div>
+          </div>
+        </div>
+        <div class="MsubTitleWarpp">
+          <div class="sectionTitle">Charging Request</div>
+          <div class="koTxt">
+            충전 요청 시 충전가능한 조건을 확인하는 화면을 통해 사용자가
+            실시간으로 충전 상황을 인지할 수 있다.
+          </div>
+          <div class="elTxt">
+            Through the screen to check the rechargeable conditions The user can
+            recognize the charging situation in real time.
           </div>
         </div>
         <div class="charging">
@@ -652,6 +723,16 @@
             </div>
           </div>
         </div>
+        <div class="MsubTitleWarpp">
+          <div class="sectionTitle">Home</div>
+          <div class="koTxt">
+            배터리 충전량, 충전 요청, 소요시간, 결제 금액, 등 사용자가 필요한
+            정보를 하나의 화면에서 확인할 수 있다.
+          </div>
+          <div class="elTxt">
+            The information that users need You can see it on one screen.
+          </div>
+        </div>
         <div class="home">
           <div class="imgWrapp">
             <div class="img">
@@ -663,16 +744,62 @@
           </div>
         </div>
       </section>
-      <section id="home">
+      <section id="homeImg">
         <div class="homeImg">
           <img src="./img/m12.png" alt="m12" />
+        </div>
+      </section>
+      <section id="carDisplay">
+        <div class="sectionTitle">Car Display ver.</div>
+        <div class="contentsWrapp">
+          <div class="koTxt">Intro</div>
+          <div class="imgWrapp">
+            <img src="./img/t1.png" alt="t1" />
+          </div>
+        </div>
+        <div class="contentsWrapp">
+          <div class="koTxt">Home</div>
+          <div class="imgWrapp">
+            <img src="./img/t2.png" alt="t2" />
+            <img src="./img/t3.png" alt="t3" />
+          </div>
+        </div>
+        <div class="contentsWrapp">
+          <div class="koTxt">Pay</div>
+          <div class="imgWrapp">
+            <img src="./img/t4.png" alt="t4" />
+          </div>
+        </div>
+        <div class="contentsWrapp">
+          <div class="koTxt">Map</div>
+          <div class="imgWrapp">
+            <img src="./img/t5.png" alt="t5" />
+            <img src="./img/t6.png" alt="t6" />
+          </div>
+        </div>
+        <div class="contentsWrapp">
+          <div class="koTxt">Charging Request</div>
+          <div class="imgWrapp">
+            <img src="./img/t8.png" alt="t8" />
+            <img src="./img/t9.png" alt="t9" />
+            <img src="./img/t7.png" alt="t7" />
+          </div>
+        </div>
+        <div class="contentsWrapp">
+          <div class="koTxt">Charge State</div>
+          <div class="imgWrapp">
+            <img src="./img/t10.png" alt="t10" />
+            <img src="./img/t11.png" alt="t11" />
+          </div>
         </div>
       </section>
       <section id="video">
         <video src=""></video>
       </section>
       <section id="footer">
-        <img src="./img/stylelogo.png" alt="stylelogo" />
+        <div class="footerLogo">
+          <img src="./img/SymbolLogo.png" alt="" />
+        </div>
       </section>
     </main>
   </body>
