--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
           <div>
             <a href="./zero100.html">Zero100</a>
           </div>
-          <div>Amazon Kr</div>
+          <div>
+            <a href="./amazon.html"> Amazon Kr</a>
+          </div>
           <div>Threads</div>
         </div>
       </div>
@@ -117,9 +119,9 @@
               </div>
             </div>
             <div class="infoContents">
-              <div class="proIgm">
+              <a class="proIgm" href="./amazon.html">
                 <img src="./img/다운로드.jpg" alt="ex" />
-              </div>
+              </a>
               <div class="proDesc">
                 <div class="proName">Amazon kr</div>
                 <div class="proDate">Amazon Site Redesign Web/App</div>
