--- a/amazon.html
+++ b/amazon.html
@@ -15,12 +15,26 @@
   <body>
     <main id="innerWrapp">
       <section id="intro">
-        <img src="./img_amazon/amazonLogo.png" alt="amazonLogo" />
+        <div class="logo">
+          <img src="./img_amazon/amazonLogoWVER.png" alt="amazonLogo" />
+        </div>
+        <div class="vidoeWrapp">
+          <div class="filter"></div>
+          <video
+            src="./img_amazon/1735-149749903.mp4"
+            autoplay
+            muted
+            loop
+          ></video>
+        </div>
       </section>
       <section id="bg">
-        <div class="bgTitle">
-          지상 최대의 규모 쇼핑사이트 아마존 코리아를 통해 직구하세요
+        <div class="bgTitle">지상 최대의 규모 쇼핑사이트</div>
+        <div class="aktxt">
+          <div class="yellow">아마존 코리아</div>
+          <div>를 통해 직구하세요</div>
         </div>
+        <img src="./img_amazon/amazonlone.png" alt="amazonlone" />
         <div class="bgtext">
           아마존코리아는 기존 아마존쇼핑몰의 거대한 규모의 쇼핑몰을 한국 국내
           사용자들이<br />
