--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             </div>
             <div class="infoContents">
               <a class="proIgm" href="./amazon.html">
-                <img src="./img/다운로드.jpg" alt="ex" />
+                <img src="./img_amazon/interface.png" alt="ex" />
               </a>
               <div class="proDesc">
                 <div class="proName">Amazon kr</div>
@@ -205,7 +205,7 @@
           <div class="svgBox">
             <div class="App">
               <img src="./img/logo1.png" alt="logo1" />
-              <img src="./img/logo1.png" alt="logo1" />
+              <img src="./img_amazon/amazonLogoWVER.png" alt="logo1" />
               <img src="./img/logo1.png" alt="logo1" />
             </div>
             <svg width="180" height="180" viewBox="0 0 300 300">
