--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
           <div>
             <a href="./amazon.html"> Amazon Kr</a>
           </div>
-          <div>Threads</div>
+          <div>
+            <a class="proIgm" href="./threads.html">Threads</a>
+          </div>
         </div>
       </div>
     </section>
@@ -128,9 +130,9 @@
               </div>
             </div>
             <div class="infoContents">
-              <div class="proIgm">
+              <a class="proIgm" href="./threads.html">
                 <img src="./img/1.jpg" alt="ex" />
-              </div>
+              </a>
               <div class="proDesc">
                 <div class="proName">Threads</div>
                 <div class="proDate">Threads Site Redesign Web/App</div>
