--- a/threads.html
+++ b/threads.html
@@ -19,7 +19,7 @@
           <img src="./img_Threads/intro.png" alt="intro" />
         </div>
       </section>
-      <section class="videoArea">
+      <section class="bgimg">
         <img src="./img_Threads/bg1.png" alt="bg1" />
       </section>
       <section id="bg">
@@ -52,6 +52,248 @@
               <div>Figma</div>
               <div>React</div>
               <div>Photoshop</div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="research">
+        <div class="pageTitle">Desk Research</div>
+        <div class="textWrapp">
+          <div class="maintxt">스레드는 어떤 목적으로 만들어졌을까</div>
+          <div class="subtxt">
+            인스타그램을 만든 메타(Meta)의 차기 sns서비스 이다. 쉬운 접근성과
+            서로간의 피드와 스토리를 보며 개방적이고 긴밀하게<br />
+            소통하는 인스타그램과 달리 보다 테스트위주의 글을 작성하고 팔로워 중
+            원하는 사람들과 가볍게 소통할 수 있는sns이다.
+          </div>
+        </div>
+        <div class="researchContentsWrapp">
+          <div class="imgBox">
+            <img src="./img_Threads/re1.png" alt="re1" />
+          </div>
+          <div class="imgBox">
+            <img src="./img_Threads/re2.png" alt="re2" />
+          </div>
+        </div>
+      </section>
+      <section id="research">
+        <div class="textWrapp">
+          <div class="maintxt">스레드 사용자의 이탈률은 왜 높을까</div>
+          <div class="subtxt">
+            X(트위터)는 익명성을 기반으로 유사한 취미, 정치 성향, 가치관을 가진
+            이용자끼리 깊게 소통할 수 있는 플랫폼으로 인기를 얻었다. <br />반면
+            스레드는 인스타그램 계정을 기반으로 하기 때문에 트위터 이용자들이
+            자유를 느끼는 익명성의 장점을 구현하지 못했다.
+          </div>
+        </div>
+        <div class="researchContentsWrapp">
+          <div class="imgBox">
+            <img src="./img_Threads/re3.png" alt="re3" />
+          </div>
+          <div class="imgBox">
+            <img src="./img_Threads/re4.png" alt="re4" />
+          </div>
+        </div>
+      </section>
+      <section id="interview">
+        <div class="userBox">
+          <div class="useinterview">
+            <div class="maintxt">User Interview</div>
+            <div class="subtxt">
+              실제 스레드와 다른 sns 서비스를 이용중인 사람들을 대상으로
+              스레드의 <br />불편한 이유와 다른 sns에 비하여 자주 사용하지 않는
+              이유를 들었다.
+            </div>
+          </div>
+          <div class="userconditionWrapp">
+            <div class="interviewTitle">Interview Conditions</div>
+            <div class="interviewItems">
+              <div class="interviewItem">대면 인터뷰</div>
+              <div class="interviewItem">익명 인터뷰</div>
+            </div>
+          </div>
+          <div class="userconditionWrapp">
+            <div class="interviewTitle">Interview Range</div>
+            <div class="interviewItems">
+              <div class="interviewItem">20대 ~ 30대</div>
+              <div class="interviewItem">남성 / 여성</div>
+              <div class="interviewItem">직장인</div>
+              <div class="interviewItem">대학생</div>
+              <div class="interviewItem">기타</div>
+            </div>
+          </div>
+          <div class="userImgWrapp">
+            <div class="userImg">
+              <div class="userInfo">
+                <div>정**</div>
+                <div>24세 남자</div>
+                <div>대학생</div>
+              </div>
+              <img src="./img_Threads/user1.png" alt="user1" />
+            </div>
+            <div class="userImg">
+              <div class="userInfo">
+                <div>김**</div>
+                <div>30세 여자</div>
+                <div>대학원생</div>
+              </div>
+              <img src="./img_Threads/user2.png" alt="user2" />
+            </div>
+            <div class="userImg">
+              <div class="userInfo">
+                <div>임**</div>
+                <div>29세 여자</div>
+                <div>회사원</div>
+              </div>
+              <img src="./img_Threads/user3.png" alt="user3" />
+            </div>
+            <div class="userImg">
+              <div class="userInfo">
+                <div>백**</div>
+                <div>28세 남자</div>
+                <div>개발자</div>
+              </div>
+              <img src="./img_Threads/user4.png" alt="user4" />
+            </div>
+          </div>
+        </div>
+        <div class="problemBox">
+          <div class="problemMain">Problem</div>
+          <div class="problemWrapp">
+            <div class="problems">
+              <div>
+                <img src="./img_Threads/problemIcon.png" alt="problemIcon" />
+              </div>
+              <div class="problem">인스타그램 계정없이 사용할 수 없어요.</div>
+            </div>
+            <div class="problems">
+              <div>
+                <img src="./img_Threads/problemIcon.png" alt="problemIcon" />
+              </div>
+              <div class="problem">공개범위 설정이 자세하지 않아요.</div>
+            </div>
+            <div class="problems">
+              <div>
+                <img src="./img_Threads/problemIcon.png" alt="problemIcon" />
+              </div>
+              <div class="problem">
+                데스크탑 모드에 다크라이트모드를 설정할 수 없어요.
+              </div>
+            </div>
+            <div class="problems">
+              <div>
+                <img src="./img_Threads/problemIcon.png" alt="problemIcon" />
+              </div>
+              <div class="problem">
+                핀기능 사용시 사이드바가 시인성을 방해해요.
+              </div>
+            </div>
+            <div class="problems">
+              <div>
+                <img src="./img_Threads/problemIcon.png" alt="problemIcon" />
+              </div>
+              <div class="problem">
+                호기심에 만들어봤는데 계정 탈퇴가 불가능해요
+              </div>
+            </div>
+            <div class="problemLogo">
+              <img src="./img_Threads/problemlogo.png" alt="problemlogo" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="asistobe">
+        <div class="problemBox">
+          <div class="problemMain">Problem</div>
+          <div class="problemWrapp">
+            <div class="problems">
+              <div>
+                <img src="./img_Threads/problemIcon.png" alt="problemIcon" />
+              </div>
+              <div class="problem">인스타그램 계정없이 사용할 수 없어요.</div>
+            </div>
+            <div class="problems">
+              <div>
+                <img src="./img_Threads/problemIcon.png" alt="problemIcon" />
+              </div>
+              <div class="problem">공개범위 설정이 자세하지 않아요.</div>
+            </div>
+            <div class="problems">
+              <div>
+                <img src="./img_Threads/problemIcon.png" alt="problemIcon" />
+              </div>
+              <div class="problem">
+                데스크탑 모드에 다크라이트모드를 설정할 수 없어요.
+              </div>
+            </div>
+            <div class="problems">
+              <div>
+                <img src="./img_Threads/problemIcon.png" alt="problemIcon" />
+              </div>
+              <div class="problem">
+                핀기능 사용시 사이드바가 시인성을 방해해요.
+              </div>
+            </div>
+            <div class="problems">
+              <div>
+                <img src="./img_Threads/problemIcon.png" alt="problemIcon" />
+              </div>
+              <div class="problem">
+                호기심에 만들어봤는데 계정 탈퇴가 불가능해요
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="solutionBOx">
+          <div class="solTitle">
+            <div class="solMain">Solution</div>
+            <div class="tobe">to-be</div>
+          </div>
+          <div class="solWrapp">
+            <div class="solutions">
+              <div>
+                <img src="./img_Threads/solutionIcon.png" alt="solutionIcon" />
+              </div>
+              <div class="solution">
+                독자적인 계성 생성을 만들어 인스타그램의 계정 없이도 회원가입이
+                가능하게 만든다.
+              </div>
+            </div>
+            <div class="solutions">
+              <div>
+                <img src="./img_Threads/solutionIcon.png" alt="solutionIcon" />
+              </div>
+              <div class="solution">
+                공개 범위 설정을 자세하게 구분하여 사용자의 구체적인 공개범위
+                설정을 도와준다.
+              </div>
+            </div>
+            <div class="solutions">
+              <div>
+                <img src="./img_Threads/solutionIcon.png" alt="solutionIcon" />
+              </div>
+              <div class="solution">
+                설정에 다크모드와 라이트모드를 추가하여 사용자가 원하는 모드를
+                설정할 수 있게 한다.
+              </div>
+            </div>
+            <div class="solutions">
+              <div>
+                <img src="./img_Threads/solutionIcon.png" alt="solutionIcon" />
+              </div>
+              <div class="solution">
+                사이드바를 헤더로 리뉴얼하여 사용자의 데스트 탑 사용성을
+                높여준다.
+              </div>
+            </div>
+            <div class="solutions">
+              <div>
+                <img src="./img_Threads/solutionIcon.png" alt="solutionIcon" />
+              </div>
+              <div class="solution">
+                회원 탈퇴 기능을 추가하여 사용자의 서비스 이용의 자유성을
+                보장한다.
+              </div>
             </div>
           </div>
         </div>
